--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -192,6 +192,26 @@ select:focus {
 	border-bottom: 1px solid #e5e7eb;
 }
 
+/* Code blocks */
+code {
+	background-color: var(--gray-200);
+	padding: 0.5rem;
+	border-radius: 0.375rem;
+	margin-top: 0.5rem;
+	display: block;
+	font-family: monospace;
+	color: var(--gray-900);
+}
+
+/* Inline code styles */
+code:not(.block) {
+	display: inline;
+	padding: 0.2rem 0.4rem;
+	background-color: var(--gray-200);
+	border-radius: 0.25rem;
+	color: var(--gray-900);
+}
+
 /* Sidebar Styles */
 .sidebar {
 	position: fixed;
@@ -374,6 +394,16 @@ body.bg-gray-900 .sidebar-link {
 
 body.bg-gray-900 .sidebar-link:hover {
 	background-color: rgba(255, 255, 255, 0.1);
+}
+
+body.bg-gray-900 code {
+	background-color: var(--gray-800);
+	color: var(--gray-100);
+}
+
+body.bg-gray-900 code:not(.block) {
+	background-color: var(--gray-800);
+	color: var(--gray-100);
 }
 
 /* Loader styles */
