--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -50,6 +50,10 @@ select {
 	appearance: none;
 }
 
+.blur-xl {
+    filter: blur(20px);
+}
+
 /* ======================= */
 /* Layout Components       */
 /* ======================= */
